# doc-generator

./: .gitignore  CHANGELOG.md  PLAN.md  PROJECT_STATUS.md  README.md  bilibili_ai_ranking.json  crawl_bilibili.py  findings.md  product_spec.md  progress.md  project_spec.md  pyproject.toml  pytest.ini  run.py  run.sh  setup.py  task_plan.md
.claude/: CLAUDE.md
.claude/commands/: qwen-advisor.md
docs/: DOCUMENTATION_MAP.md  ERROR_LOG.md  IMPLEMENTATION_PLAN.md  PRODUCT_STRATEGY.md  TDD_WORKFLOW.md
scripts/: test.py  test.sh
specs/: 001-design-brief-clarification.md  README.md  spec-template.md
src/doc_gen/: __init__.py  __main__.py
src/doc_gen/cli/: commands.py  main.py  prompts.py
src/doc_gen/config/: loader.py  models.py
src/doc_gen/core/: assembler.py  content.py  generator.py  outline.py  reviewer.py
src/doc_gen/llm/: client.py  providers.py
src/doc_gen/llm/prompts/: chapter.txt  outline.txt  review.txt
src/doc_gen/models/: document.py  outline.py  project.py  review.py
src/doc_gen/sources/: parser.py  txt_parser.py
src/doc_gen/storage/: database.py  project.py  repository.py  version_history.py
src/doc_gen/utils/: logger.py  text.py  token_compression.py  tokens.py
tests/: test_concurrency.py  test_config.py  test_config_validation.py  test_content_generator.py  test_design_brief_flow.py  test_models.py  test_recovery.py  test_review_feedback_integration.py  test_reviewer.py  test_status_management.py  test_storage.py  test_token_compression.py  test_version_history.py
