[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-gen"
version = "0.1.0"
description = "CLI tool that generates comprehensive knowledge documents through conversational interaction"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
doc-gen = "doc_gen.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]


[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true

[tool.ruff]
target-version = "py310"
line-length = 100
